style.css
body {
    font-family: Roboto, 'Helvetica Neue', sans-serif;
    margin: 0;
}

.section {
    max-width: 1000px;
    margin: 0 auto;
}

.dark-color {
    background-color: #1f2937;
    color: #E5E7EB;
}

.header, .footer {
    display: flex;
    padding: 16px;
}

.footer {
    justify-content: center;
}

.header-text {
    font-size: 24px;
    color: #f9faf8;
    font-weight: bold;
}

.logo {
    margin-right: auto;
}

ul {
    display: flex;
    padding: 0;
    margin: 0;
    list-style: none;
    align-items: center;
    gap: 32px;
    font-weight: 200;
}

.hero {
    display: flex;
    padding: 64px 16px 80px 16px;
    gap: 32px;
}

.img {
    background-color:#4a4a4c;
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.left-hero {
    flex: 1;
}

.main-text {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
    margin-bottom: 16px;
}

.secondary-text {
    font-size: 18px;
    font-weight: 200;
    color: #f9faf8;
}

button {
    background-color: #3882f6;
    color: #E5E7EB;
    font-weight: bold;
    border-width: 0;
    border-radius: 6px;
    padding: 6px 20px;
    margin: 24px 0 0 0;
}

.info-header-text {
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
    text-align: center;
    padding: 48px 0;
}

.card-container {
    display: flex;
    justify-content: center;
    gap: 32px;
    padding-bottom: 48px;
    flex-wrap: wrap;
}

.card {
    width: 175px;
    height: 300px;
}

.card-img {
    box-sizing: border-box;
    border-style: solid;
    border-width: 3px;
    border-color: #3882f6;
    border-radius: 6px;
    width: 175px;
    height: 175px;
}

.card-text {
    text-align: center;
    color: #4a4a4c;
    margin: 8px 0;
}

.gray-color {
    background-color: #E5E7EB;
}

.quote {
    color: #1f2937;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    flex-direction: column;
}

.quote-text {
    font-size: 36px;
    font-weight: 100;
    font-style: italic;
    padding: 100px 100px 0 100px;
}

.quote-author {
    font-size: 24px;
    font-weight: bold;
    padding: 0 100px 100px 100px;
}

.cta-container {
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cta {
    background-color: #3882f6;
    width: 1000px;
    margin: 0 auto;
    border-radius: 6px;
    padding: 48px 100px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.cta button {
    border-style: solid;
    border-width: 2px;
    border-color: #f9faf8;
    margin: 12px 0;
    flex: none;
}

